# server/api-spec-1.0.yaml
@@ -30,61 +30,24 @@ paths:
         '200':
           description: OK
   ### USERS
-  /user/{userID}:
-    parameters:
-        - name: username
-          in: path
-          required: true
-          schema:
-            type: string
-    get:
-      summary: Fetches user details
-      description: Returns the details of a User
-      tags:
-        - User
-      responses:
-        '200':
-          description: Success
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/User'
-        '404':
-          description: No User found
-    put:
-      summary: Update a user
-      description: Updates the details of a User. Note, this will explicitly ignore balance.
-      tags:
-        - User
-      requestBody:
-        description: Update a User
-        content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/User'
-        required: true
-      responses:
-        '200':
-          description: Success
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/User'
-        '400':
-          description: Invalid user Identifier
-        '404':
-          description: User not found
+  /user/:
     post:
-      summary: Add a new user
+      summary: Create new user
       description: Create a new user
       tags:
         - User
       requestBody:
-        description: Details of the user to create
+        description: |
+          Details of the user to create.
+
+          Note:
+
+          * Users cannot be created with a negative balance
+          * Admin users cannot be created via the API
         content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
+                $ref: '#/components/schemas/CreateUser'
         required: true
       responses:
         '200':
@@ -108,16 +71,18 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-  /user/{userID}/balance:
+
+
+  /user/{userID}:
     parameters:
-    - name: username
-      in: path
-      required: true
-      schema:
-        type: string
+        - name: username
+          in: path
+          required: true
+          schema:
+            type: string
     get:
-      summary: Fetches user balance
-      description: Returns the balance of a User
+      summary: Fetches user details
+      description: Returns the details of a User
       tags:
         - User
       responses:
@@ -126,10 +91,9 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Balance'
+                $ref: '#/components/schemas/User'
         '404':
           description: No User found
-
   /users:
     get:
       tags:
@@ -235,25 +199,37 @@ components:
       description: Username of the user
       example: testuser123
 
+    CreateUser:
+      type: object
+      properties:
+        username:
+          $ref: '#/components/schemas/Username'
+        balance:
+            type: number
+            format: int64
+            description: User's current balance, in cents
+            example: 1337
+        role:
+          $ref: '#/components/schemas/UserRole'
+
+    UserRole:
+      type: string
+      enum:
+        - member
+        - guest
+        - friend
+        - admin
+      description: User's current role
+      example: member
+
     User:
       type: object
       properties:
         id:
-          $ref: '#/components/schemas/Username'
-        balance:
-          type: number
-          format: int64
-          description: User's current balance, in cents
-          example: 1337
-        role:
           type: string
-          enum:
-            - member
-            - guest
-            - friend
-            - admin
-          description: User's current role
-          example: member
+          description: UUID of the User
+      allOf:
+        - $ref: '#/components/schemas/CreateUser'
 
     Users:
       type: array
